--- a/src/zconfigform.ui
+++ b/src/zconfigform.ui
@@ -34,7 +34,7 @@
      </property>
      <layout class="QGridLayout" name="gridLayout_2">
       <item row="1" column="0">
-       <widget class="QLabel" name="lblSectionPlus">
+       <widget class="QLabel" name="lblSectionPlus_2">
         <property name="font">
          <font>
           <weight>75</weight>
@@ -42,16 +42,12 @@
          </font>
         </property>
         <property name="text">
-         <string>Дата закрытия внесения изменений:</string>
+         <string>Текущий рабочий период:</string>
         </property>
        </widget>
       </item>
       <item row="1" column="1">
-       <widget class="QDateEdit" name="dateEdit">
-        <property name="calendarPopup">
-         <bool>true</bool>
-        </property>
-       </widget>
+       <widget class="QComboBox" name="cboPeriod"/>
       </item>
      </layout>
     </widget>
