--- a/src/zusersform.ui
+++ b/src/zusersform.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>505</width>
-    <height>180</height>
+    <height>245</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -115,6 +115,42 @@
       </item>
       <item row="1" column="1" colspan="2">
        <widget class="QLineEdit" name="txtLogin"/>
+      </item>
+      <item row="6" column="1" colspan="2">
+       <widget class="QComboBox" name="cboPeriod"/>
+      </item>
+      <item row="6" column="0">
+       <widget class="QLabel" name="lblSectionPlus_5">
+        <property name="font">
+         <font>
+          <weight>75</weight>
+          <bold>true</bold>
+         </font>
+        </property>
+        <property name="text">
+         <string>Текущий рабочий период:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="7" column="0">
+       <widget class="QLabel" name="nameText">
+        <property name="font">
+         <font>
+          <weight>75</weight>
+          <bold>true</bold>
+         </font>
+        </property>
+        <property name="text">
+         <string>Дата закрытия:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="7" column="1" colspan="2">
+       <widget class="QDateEdit" name="dateEdit">
+        <property name="calendarPopup">
+         <bool>true</bool>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
