--- a/src/zreport.ui
+++ b/src/zreport.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1060</width>
-    <height>925</height>
+    <width>1061</width>
+    <height>518</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Отчет за период</string>
+   <string>Табель</string>
   </property>
   <property name="windowIcon">
    <iconset resource="../cleaning.qrc">
@@ -35,40 +35,15 @@
      <property name="title">
       <string/>
      </property>
-     <layout class="QHBoxLayout" name="horizontalLayout_6">
-      <item>
-       <layout class="QGridLayout" name="gridLayout">
-        <item row="0" column="0">
-         <widget class="QLabel" name="label">
-          <property name="text">
-           <string>Начало периода:</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="1">
-         <widget class="QDateEdit" name="dateStart">
-          <property name="calendarPopup">
-           <bool>true</bool>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="0">
-         <widget class="QLabel" name="label_2">
-          <property name="text">
-           <string>Окончание периода:</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="1">
-         <widget class="QDateEdit" name="dateEnd">
-          <property name="calendarPopup">
-           <bool>true</bool>
-          </property>
-         </widget>
-        </item>
-       </layout>
+     <layout class="QGridLayout" name="gridLayout">
+      <item row="0" column="0">
+       <widget class="QLabel" name="label_2">
+        <property name="text">
+         <string>Смета:</string>
+        </property>
+       </widget>
       </item>
-      <item>
+      <item row="0" column="2" rowspan="5">
        <widget class="QGroupBox" name="groupBox_5">
         <property name="title">
          <string>Заметка:</string>
@@ -95,15 +70,48 @@
         </layout>
        </widget>
       </item>
-      <item>
+      <item row="1" column="0" colspan="2">
+       <widget class="QComboBox" name="cboEstimate">
+        <property name="minimumSize">
+         <size>
+          <width>300</width>
+          <height>0</height>
+         </size>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0">
+       <widget class="QLabel" name="label_4">
+        <property name="text">
+         <string>Период:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0" colspan="2">
+       <widget class="QComboBox" name="cboPeriod">
+        <property name="minimumSize">
+         <size>
+          <width>200</width>
+          <height>0</height>
+         </size>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="1">
+       <spacer name="verticalSpacer_2">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>22</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="0" column="3" rowspan="5">
        <layout class="QVBoxLayout" name="verticalLayout">
-        <item>
-         <widget class="QPushButton" name="cmdBuild">
-          <property name="text">
-           <string>Построить</string>
-          </property>
-         </widget>
-        </item>
         <item>
          <widget class="QPushButton" name="cmdSave">
           <property name="text">
@@ -246,228 +254,7 @@
     </layout>
    </item>
    <item>
-    <widget class="QTreeWidget" name="tree">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="palette">
-      <palette>
-       <active>
-        <colorrole role="Light">
-         <brush brushstyle="SolidPattern">
-          <color alpha="255">
-           <red>255</red>
-           <green>255</green>
-           <blue>127</blue>
-          </color>
-         </brush>
-        </colorrole>
-        <colorrole role="Midlight">
-         <brush brushstyle="SolidPattern">
-          <color alpha="255">
-           <red>255</red>
-           <green>255</green>
-           <blue>0</blue>
-          </color>
-         </brush>
-        </colorrole>
-        <colorrole role="Highlight">
-         <brush brushstyle="SolidPattern">
-          <color alpha="255">
-           <red>255</red>
-           <green>255</green>
-           <blue>127</blue>
-          </color>
-         </brush>
-        </colorrole>
-        <colorrole role="HighlightedText">
-         <brush brushstyle="SolidPattern">
-          <color alpha="255">
-           <red>0</red>
-           <green>0</green>
-           <blue>0</blue>
-          </color>
-         </brush>
-        </colorrole>
-       </active>
-       <inactive>
-        <colorrole role="Light">
-         <brush brushstyle="SolidPattern">
-          <color alpha="255">
-           <red>255</red>
-           <green>255</green>
-           <blue>127</blue>
-          </color>
-         </brush>
-        </colorrole>
-        <colorrole role="Midlight">
-         <brush brushstyle="SolidPattern">
-          <color alpha="255">
-           <red>255</red>
-           <green>255</green>
-           <blue>0</blue>
-          </color>
-         </brush>
-        </colorrole>
-        <colorrole role="Highlight">
-         <brush brushstyle="SolidPattern">
-          <color alpha="255">
-           <red>255</red>
-           <green>255</green>
-           <blue>127</blue>
-          </color>
-         </brush>
-        </colorrole>
-        <colorrole role="HighlightedText">
-         <brush brushstyle="SolidPattern">
-          <color alpha="255">
-           <red>0</red>
-           <green>0</green>
-           <blue>0</blue>
-          </color>
-         </brush>
-        </colorrole>
-       </inactive>
-       <disabled>
-        <colorrole role="Light">
-         <brush brushstyle="SolidPattern">
-          <color alpha="255">
-           <red>255</red>
-           <green>255</green>
-           <blue>127</blue>
-          </color>
-         </brush>
-        </colorrole>
-        <colorrole role="Midlight">
-         <brush brushstyle="SolidPattern">
-          <color alpha="255">
-           <red>255</red>
-           <green>255</green>
-           <blue>0</blue>
-          </color>
-         </brush>
-        </colorrole>
-        <colorrole role="Highlight">
-         <brush brushstyle="SolidPattern">
-          <color alpha="255">
-           <red>51</red>
-           <green>153</green>
-           <blue>255</blue>
-          </color>
-         </brush>
-        </colorrole>
-        <colorrole role="HighlightedText">
-         <brush brushstyle="SolidPattern">
-          <color alpha="255">
-           <red>0</red>
-           <green>0</green>
-           <blue>0</blue>
-          </color>
-         </brush>
-        </colorrole>
-       </disabled>
-      </palette>
-     </property>
-     <property name="autoScroll">
-      <bool>false</bool>
-     </property>
-     <property name="alternatingRowColors">
-      <bool>true</bool>
-     </property>
-     <column>
-      <property name="text">
-       <string notr="true">Организация / дата</string>
-      </property>
-     </column>
-     <column>
-      <property name="text">
-       <string>ФИО / смена</string>
-      </property>
-     </column>
-     <column>
-      <property name="text">
-       <string>Начисленная ЗП</string>
-      </property>
-     </column>
-     <column>
-      <property name="text">
-       <string>Доплаты / тариф</string>
-      </property>
-     </column>
-     <column>
-      <property name="text">
-       <string>Вычеты</string>
-      </property>
-     </column>
-     <column>
-      <property name="text">
-       <string>Остаток к выплате</string>
-      </property>
-     </column>
-     <column>
-      <property name="text">
-       <string>Примечания</string>
-      </property>
-     </column>
-     <column>
-      <property name="text">
-       <string>Заметки</string>
-      </property>
-     </column>
-     <column>
-      <property name="text">
-       <string>Количество смен</string>
-      </property>
-     </column>
-     <column>
-      <property name="text">
-       <string>Среднее за смену</string>
-      </property>
-     </column>
-     <column>
-      <property name="text">
-       <string>#</string>
-      </property>
-     </column>
-     <item>
-      <property name="text">
-       <string>Новый элемент</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>Новый элемент</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>Новый элемент</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>Новый элемент</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>Новый элемент</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>Новый элемент</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>Новый элемент</string>
-      </property>
-     </item>
-    </widget>
+    <widget class="QTableView" name="tbl"/>
    </item>
   </layout>
   <action name="actChangeOrg">
