--- a/src/zreport.ui
+++ b/src/zreport.ui
@@ -140,7 +140,7 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_3">
      <item>
-      <widget class="QGroupBox" name="groupBox_4">
+      <widget class="QGroupBox" name="pnlFind">
        <property name="title">
         <string>Поиск</string>
        </property>
